# IconPark

./: .taurignore  CHANGES.md  FIX-WATCH-LIMIT.md  QUICKSTART.md  README-TAURI.md  UPGRADE-TO-TAURI-2.9.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: generate-icons.js  generate-icons.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: IconBrowser.css  IconBrowser.tsx
